--- a/Google Workspace Studio×Geminiで候補者連絡を自動化する！CX向上型採用オペレーションフロー/cx-recruitment-operation-site/lesson3.html
+++ b/Google Workspace Studio×Geminiで候補者連絡を自動化する！CX向上型採用オペレーションフロー/cx-recruitment-operation-site/lesson3.html
@@ -114,6 +114,36 @@
             opacity: 0.9;
             max-width: 600px;
         }
+        .comparison-grid {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
+            gap: 2rem;
+            margin: 2rem 0;
+        }
+        .comparison-card {
+            padding: 2rem;
+            background: var(--paper);
+            border: 1px solid rgba(10, 14, 39, 0.1);
+            border-radius: 16px;
+            transition: all 0.3s ease;
+        }
+        .comparison-card:hover {
+            box-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1);
+            transform: translateY(-4px);
+        }
+        .comparison-card.before {
+            border-top: 4px solid var(--red);
+        }
+        .comparison-card.after {
+            border-top: 4px solid var(--green);
+        }
+        .comparison-header {
+            font-size: 0.75rem;
+            font-weight: 700;
+            letter-spacing: 0.05em;
+            text-transform: uppercase;
+            margin-bottom: 1.25rem;
+        }
         .section {
             max-width: 1200px;
             margin: 0 auto;
@@ -445,6 +475,28 @@
                 面接終了をトリガーに、評価依頼の自動送信と次ステップの条件分岐処理を実装します。
                 Proceed / Hold / Decline の3パターンで自動処理を設計しましょう。
             </p>
+
+            <!-- Before/After: このレッスンで何が変わるか -->
+            <div class="comparison-grid" style="margin-top: 2.5rem;">
+                <div class="comparison-card before">
+                    <div class="comparison-header" style="color: var(--red); margin-bottom: 1rem;">BEFORE：受講前</div>
+                    <ul style="list-style: none; font-size: 0.9375rem; color: var(--gray);">
+                        <li style="padding: 0.5rem 0;">面接後の評価依頼を手動で送信</li>
+                        <li style="padding: 0.5rem 0;">次ステップの判断に時間がかかる</li>
+                        <li style="padding: 0.5rem 0;">候補者への連絡が遅れがち</li>
+                        <li style="padding: 0.5rem 0;">面接後処理に毎回1時間以上</li>
+                    </ul>
+                </div>
+                <div class="comparison-card after">
+                    <div class="comparison-header" style="color: var(--green); margin-bottom: 1rem;">AFTER：受講後</div>
+                    <ul style="list-style: none; font-size: 0.9375rem; color: var(--gray);">
+                        <li style="padding: 0.5rem 0;">面接終了で評価依頼が自動送信</li>
+                        <li style="padding: 0.5rem 0;">Proceed/Hold/Declineで自動分岐</li>
+                        <li style="padding: 0.5rem 0;">候補者へ即座に次ステップ連絡</li>
+                        <li style="padding: 0.5rem 0;">面接後作業がゼロに</li>
+                    </ul>
+                </div>
+            </div>
         </div>
     </div>
 
