--- a/Google Workspace Studio×Gmail×Geminiで追客漏れゼロを実現する営業パイプライン自動化フロー/sales-pipeline-automation-site/lesson1.html
+++ b/Google Workspace Studio×Gmail×Geminiで追客漏れゼロを実現する営業パイプライン自動化フロー/sales-pipeline-automation-site/lesson1.html
@@ -1015,7 +1015,7 @@
                     <tr>
                         <td class="schedule-session">第2回</td>
                         <td>見込み顧客メール要約エージェント</td>
-                        <td>スケジュールスターター（毎朝9時）→ Gmailステップ → Geminiステップで要約 → Chat DMステップで通知</td>
+                        <td>Gmailスターター（メール受信時）→ Geminiステップで要約 → Chat DMステップで通知</td>
                     </tr>
                     <tr>
                         <td class="schedule-session">第3回</td>
