--- a/Google Workspace Studioで報告・承認・進捗管理を自動化する！管理職のためのゼロタッチマネジメント/zero-touch-management-site/lesson2.html
+++ b/Google Workspace Studioで報告・承認・進捗管理を自動化する！管理職のためのゼロタッチマネジメント/zero-touch-management-site/lesson2.html
@@ -549,6 +549,28 @@
             <div class="lesson-number">02</div>
             <h1 class="lesson-title">日報と週報を自動要約する確認時短フロー</h1>
             <p class="lesson-subtitle">重要ポイントだけを抽出して確認時間を5分の1にする</p>
+
+            <!-- Before/After: このレッスンで何が変わるか -->
+            <div class="comparison-grid" style="margin-top: 2.5rem; text-align: left;">
+                <div class="comparison-card before">
+                    <div class="comparison-header" style="color: #EF4444;">BEFORE：受講前</div>
+                    <ul style="list-style: none; font-size: 0.9375rem; color: var(--gray);">
+                        <li style="padding: 0.5rem 0;">日報10人分を毎日30〜60分かけて読む</li>
+                        <li style="padding: 0.5rem 0;">重要情報が本文中に埋もれる</li>
+                        <li style="padding: 0.5rem 0;">依頼事項を見落としがち</li>
+                        <li style="padding: 0.5rem 0;">対応優先度が不明確</li>
+                    </ul>
+                </div>
+                <div class="comparison-card after">
+                    <div class="comparison-header" style="color: #22C55E;">AFTER：受講後</div>
+                    <ul style="list-style: none; font-size: 0.9375rem; color: var(--gray);">
+                        <li style="padding: 0.5rem 0;">AI要約で確認時間12分/日（80%削減）</li>
+                        <li style="padding: 0.5rem 0;">課題・依頼事項が自動抽出される</li>
+                        <li style="padding: 0.5rem 0;">評価ラベルで対応要否が一目瞭然</li>
+                        <li style="padding: 0.5rem 0;">Report Summary Agentを構築</li>
+                    </ul>
+                </div>
+            </div>
         </header>
 
         <section>
