--- a/Google Workspace Studioで報告・承認・進捗管理を自動化する！管理職のためのゼロタッチマネジメント/zero-touch-management-site/lesson3.html
+++ b/Google Workspace Studioで報告・承認・進捗管理を自動化する！管理職のためのゼロタッチマネジメント/zero-touch-management-site/lesson3.html
@@ -572,6 +572,28 @@
             <div class="lesson-number">03</div>
             <h1 class="lesson-title">チェックリストを自動で判定する審査フロー</h1>
             <p class="lesson-subtitle">合格・要修正・再提出を条件分岐で仕分ける</p>
+
+            <!-- Before/After: このレッスンで何が変わるか -->
+            <div class="comparison-grid" style="margin-top: 2.5rem; text-align: left;">
+                <div class="comparison-card before">
+                    <div class="comparison-header" style="color: #EF4444;">BEFORE：受講前</div>
+                    <ul style="list-style: none; font-size: 0.9375rem; color: var(--gray);">
+                        <li style="padding: 0.5rem 0;">品質チェックを毎日30分手動で実施</li>
+                        <li style="padding: 0.5rem 0;">判定基準が曖昧で属人的</li>
+                        <li style="padding: 0.5rem 0;">フィードバックが翌日以降に遅延</li>
+                        <li style="padding: 0.5rem 0;">同じ指摘を繰り返す非効率</li>
+                    </ul>
+                </div>
+                <div class="comparison-card after">
+                    <div class="comparison-header" style="color: #22C55E;">AFTER：受講後</div>
+                    <ul style="list-style: none; font-size: 0.9375rem; color: var(--gray);">
+                        <li style="padding: 0.5rem 0;">AIが自動判定でチェック時間90%削減</li>
+                        <li style="padding: 0.5rem 0;">判定基準が統一・明確・公平に</li>
+                        <li style="padding: 0.5rem 0;">即時フィードバックで改善サイクル加速</li>
+                        <li style="padding: 0.5rem 0;">Quality Check Agentを構築</li>
+                    </ul>
+                </div>
+            </div>
         </header>
 
         <section>
