--- a/Google Workspace Studioで報告・承認・進捗管理を自動化する！管理職のためのゼロタッチマネジメント/zero-touch-management-site/lesson4.html
+++ b/Google Workspace Studioで報告・承認・進捗管理を自動化する！管理職のためのゼロタッチマネジメント/zero-touch-management-site/lesson4.html
@@ -498,6 +498,28 @@
             <div class="lesson-number">04</div>
             <h1 class="lesson-title">進捗ダッシュボードが自動で更新される仕組み</h1>
             <p class="lesson-subtitle">Driveとスプレッドシートを連携する</p>
+
+            <!-- Before/After: このレッスンで何が変わるか -->
+            <div class="comparison-grid" style="margin-top: 2.5rem; text-align: left;">
+                <div class="comparison-card before">
+                    <div class="comparison-header" style="color: #EF4444;">BEFORE：受講前</div>
+                    <ul style="list-style: none; font-size: 0.9375rem; color: var(--gray);">
+                        <li style="padding: 0.5rem 0;">提出状況を毎日手動で確認</li>
+                        <li style="padding: 0.5rem 0;">未提出者の検知が翌朝になる</li>
+                        <li style="padding: 0.5rem 0;">週次レポート作成に1時間</li>
+                        <li style="padding: 0.5rem 0;">添付ファイルが散逸して検索困難</li>
+                    </ul>
+                </div>
+                <div class="comparison-card after">
+                    <div class="comparison-header" style="color: #22C55E;">AFTER：受講後</div>
+                    <ul style="list-style: none; font-size: 0.9375rem; color: var(--gray);">
+                        <li style="padding: 0.5rem 0;">ダッシュボードで即時確認</li>
+                        <li style="padding: 0.5rem 0;">未提出者は当日20:00に自動アラート</li>
+                        <li style="padding: 0.5rem 0;">週次レポートは自動生成</li>
+                        <li style="padding: 0.5rem 0;">4つのAgentでデータ連携を実現</li>
+                    </ul>
+                </div>
+            </div>
         </header>
 
         <section>
