--- a/Google Workspace Studioで報告・承認・進捗管理を自動化する！管理職のためのゼロタッチマネジメント/zero-touch-management-site/lesson5.html
+++ b/Google Workspace Studioで報告・承認・進捗管理を自動化する！管理職のためのゼロタッチマネジメント/zero-touch-management-site/lesson5.html
@@ -540,6 +540,28 @@
             <div class="lesson-number">05</div>
             <h1 class="lesson-title">承認プロセスを自動化するワークフロー</h1>
             <p class="lesson-subtitle">誰に何をいつ伝えるかを整理し遅延ゼロを実現する</p>
+
+            <!-- Before/After: このレッスンで何が変わるか -->
+            <div class="comparison-grid" style="margin-top: 2.5rem; text-align: left;">
+                <div class="comparison-card before">
+                    <div class="comparison-header" style="color: #EF4444;">BEFORE：受講前</div>
+                    <ul style="list-style: none; font-size: 0.9375rem; color: var(--gray);">
+                        <li style="padding: 0.5rem 0;">承認依頼を手動でルーティング</li>
+                        <li style="padding: 0.5rem 0;">承認遅延に気づけない</li>
+                        <li style="padding: 0.5rem 0;">リマインドを個別に送信</li>
+                        <li style="padding: 0.5rem 0;">管理業務に多くの時間を消費</li>
+                    </ul>
+                </div>
+                <div class="comparison-card after">
+                    <div class="comparison-header" style="color: #22C55E;">AFTER：受講後</div>
+                    <ul style="list-style: none; font-size: 0.9375rem; color: var(--gray);">
+                        <li style="padding: 0.5rem 0;">承認依頼を自動分類・ルーティング</li>
+                        <li style="padding: 0.5rem 0;">自動リマインド・エスカレーション</li>
+                        <li style="padding: 0.5rem 0;">8つのAgentでゼロタッチマネジメント完成</li>
+                        <li style="padding: 0.5rem 0;">管理業務70%削減を実現</li>
+                    </ul>
+                </div>
+            </div>
         </header>
 
         <section>
